--- a/app/styles/pages/TeamPage.scss
+++ b/app/styles/pages/TeamPage.scss
@@ -1,3 +1,21 @@
 header {
   height: 50px;
 }
+
+header {
+  height: 50px; }
+
+#myCarousel .carousel-indicators {
+  bottom: -150px; }
+  #myCarousel .carousel-indicators li {
+    width: 70px;
+    height: 70px;
+    background-image: url("http://uwecocar.com/images/home/car.jpg"); }
+
+#myCarousel .carousel-inner {
+  margin-bottom: 100px; }
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  width: 70%;
+  margin: auto; }
