--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -1,11 +1,16 @@
 header {
-  height: 50px;
-}
-
+  height: 20px; }
+  
 .nav-bar {
-	li {
-		list-style-type: none;
-	    display: inline-block;
-	    margin-left: 5%;
-	}	
+  background-color: purple;
+  padding: 15px; 
+}
+.nav-bar #logo {
+    width: 120px;
+    height: 30px; 
+}
+.nav-bar li {
+    list-style-type: none;
+    display: inline-block;
+    margin-left: 5%; 
 }
