add bootstrap to the homepage to make it responsive
add grid system to the homepage and some background color

--- a/app/styles/components/footer.scss
+++ b/app/styles/components/footer.scss
@@ -1,8 +1,8 @@
 footer {
   width: 100%;
   background-color: purple;
-  position: absolute;
-  padding: 10px;
+  position: static;
+  padding: 10px !important;
   bottom: 0; }
 
 
