--- a/app/styles/components/header.scss
+++ b/app/styles/components/header.scss
@@ -3,7 +3,7 @@ header {
   
 .nav-bar {
   background-color: purple;
-  padding: 15px; 
+  padding: 15px !important; 
 }
 .nav-bar #logo {
     width: 120px;
